--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,21 +1,2 @@
-<div class="interval-select">
-  <mat-form-field>
-    <mat-label>Candle Interval</mat-label>
-    <mat-select [(ngModel)]="candleInterval" (ngModelChange)="changeCandleInterval()">
-      <mat-option value="1 min">1 min</mat-option>
-      <mat-option value="2 min">2 min</mat-option>
-      <mat-option value="5 min">5 min</mat-option>
-    </mat-select>
-  </mat-form-field>
-</div>
-<ng-container *ngIf="data$ | async as data">
-  <div>
-    <h3>{{ currentSymbol }}</h3>
-      <ng-container *ngIf="data">
-        <h1>{{ data[data.length - 1].last | currency }}</h1>
-      </ng-container>
-  </div>
-</ng-container>
-<chart [prices]="data$"></chart>
-<volume-chart [prices]="data$"></volume-chart>
+<tab-manager></tab-manager>
 <app-controls></app-controls>
