--- a/src/app/controls/controls.component.scss
+++ b/src/app/controls/controls.component.scss
@@ -1,4 +1,11 @@
 :host {
+  margin-top: 40px;
+  .flex {
+    display: flex;
+    font-size: 24px;
+    margin-bottom: 10px;
+    & > div { margin-right: 20px; }
+  }
   display: block;
   > * { margin-right: 20px; }
   h1 { display: inline-block; }
