--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,6 @@ $my-app-accent:  mat-palette($mat-blue-grey, 500, 900, A100);
 $my-app-warn:    mat-palette($mat-deep-orange);
 $my-app-theme: mat-dark-theme($my-app-primary, $my-app-accent, $my-app-warn);
 @include angular-material-theme($my-app-theme);
+
+.green { color: #4caf50; }
+.red { color: #ff5722; }
