candle-chart-v2 and other updates

--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -19,5 +19,5 @@
     </ng-container>
   </div>
 </ng-container>
-<candle-chart [prices]="data$"></candle-chart>
+<candle-chart-v2 [prices]="data$"></candle-chart-v2>
 <volume-chart [prices]="data$"></volume-chart>
