--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,5 +42,9 @@ $my-app-warn:    mat-palette($mat-deep-orange);
 $my-app-theme: mat-dark-theme($my-app-primary, $my-app-accent, $my-app-warn);
 @include angular-material-theme($my-app-theme);
 
-.green { color: #4caf50; }
-.red { color: #ff5722; }
+.green { color: #51cb56; }
+.red { color: #ff4444; }
+
+.mat-dialog-container {
+  background: #212121; 
+}
